--- a/public/index.html
+++ b/public/index.html
@@ -277,7 +277,7 @@
         const { createApp, reactive } = Vue;
         // 使用你的反代域名
         const MY_PROXY = "https://daili.smdhb.com";
-        const TMDB_API_KEY = "替换成你自己的KEY"; 
+        const TMDB_API_KEY = "89499ce57752da203a659844f0608f5f"; 
 
         // API地址修改为你的反代
         const TMDB_BASE_URL = `${MY_PROXY}/3`;
