--- a/public/admin.html
+++ b/public/admin.html
@@ -10,21 +10,9 @@
 
 <div id="app" class="container mt-5">
     
-    <!-- 登录界面 -->
-    <div v-if="!isLoggedIn" class="card mx-auto shadow" style="max-width: 400px;">
-        <div class="card-body">
-            <h4 class="card-title text-center mb-4">管理员登录</h4>
-            <div class="mb-3">
-                <input type="password" v-model="password" class="form-control" placeholder="请输入密码 (默认 admin)">
-            </div>
-            <button @click="login" class="btn btn-primary w-100">登录</button>
-        </div>
-    </div>
-
-    <!-- 管理界面 -->
-    <div v-else>
+    <div>
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h3>接口源管理</h3>
+            <h3>接口源管理 <span class="badge bg-secondary fs-6">免密模式</span></h3>
             <div>
                 <button class="btn btn-success me-2" @click="addSite">+ 新增接口</button>
                 <button class="btn btn-primary" @click="saveSites">保存配置</button>
@@ -60,7 +48,7 @@
             </table>
         </div>
         <div class="mt-3 text-muted small">
-            提示：修改后请点击右上角“保存配置”生效。后端会自动代理这些接口，前端用户无法查看到具体 URL。
+            提示：当前为静态部署模式。由于 Cloudflare Pages 没有后端，点击“保存”后配置将存储在您的<strong>浏览器本地 (LocalStorage)</strong>。
         </div>
     </div>
 </div>
@@ -70,30 +58,22 @@
     createApp({
         data() {
             return {
-                isLoggedIn: false,
-                password: '',
+                // 1. 默认设为 true，跳过登录
+                isLoggedIn: true, 
                 sites: []
             }
         },
+        mounted() {
+            // 页面加载时从本地存储读取配置
+            const localData = localStorage.getItem('my_sites_config');
+            if (localData) {
+                this.sites = JSON.parse(localData);
+            } else {
+                // 如果本地没数据，初始化一个示例
+                this.sites = [{ key: 'demo', name: '示例资源', api: 'https://example.com/api.php', active: true }];
+            }
+        },
         methods: {
-            async login() {
-                const res = await fetch('/api/admin/login', {
-                    method: 'POST',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({ password: this.password })
-                });
-                const data = await res.json();
-                if (data.success) {
-                    this.isLoggedIn = true;
-                    this.fetchSites();
-                } else {
-                    alert(data.msg);
-                }
-            },
-            async fetchSites() {
-                const res = await fetch('/api/admin/sites');
-                this.sites = await res.json();
-            },
             addSite() {
                 this.sites.push({ key: 'new', name: '新资源', api: '', active: true });
             },
@@ -101,12 +81,9 @@
                 if(confirm('确定删除吗？')) this.sites.splice(index, 1);
             },
             async saveSites() {
-                const res = await fetch('/api/admin/sites', {
-                    method: 'POST',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({ sites: this.sites })
-                });
-                alert('保存成功！');
+                // 2. 将数据保存到浏览器本地
+                localStorage.setItem('my_sites_config', JSON.stringify(this.sites));
+                alert('保存成功！配置已存储在您的浏览器中。');
             }
         }
     }).mount('#app');
