--- a/public/admin.html
+++ b/public/admin.html
@@ -17,6 +17,9 @@
         <div class="card-header bg-white py-3 d-flex justify-content-between align-items-center">
             <h4 class="mb-0 text-primary">🎥 资源接口管理 <small class="text-muted fs-6">共 {{ sites.length }} 个接口</small></h4>
             <div>
+                <input type="file" ref="fileInput" style="display: none" @change="handleFileUpload" accept=".json">
+                
+                <button class="btn btn-outline-info me-2" @click="$refs.fileInput.click()">导入 JSON</button>
                 <button class="btn btn-outline-primary me-2" @click="exportJSON">导出 JSON</button>
                 <button class="btn btn-success me-2" @click="addSite">+ 新增接口</button>
                 <button class="btn btn-primary" @click="saveSites">保存到本地</button>
@@ -31,7 +34,7 @@
                             <th width="60">启用</th>
                             <th width="120">标识(Key)</th>
                             <th width="180">名称</th>
-                            <th>API 地址 (支持搜索筛选...)</th>
+                            <th>API 地址</th>
                             <th width="100" class="text-center">操作</th>
                         </tr>
                     </thead>
@@ -58,42 +61,11 @@
                 </table>
             </div>
         </div>
-        <div class="card-footer bg-light small text-muted">
-            <b>提示：</b> 在 Cloudflare Pages 模式下，点击保存仅在当前浏览器生效。若要全局生效，请点击“导出 JSON”并替换仓库中的 <code>db.json</code>。
-        </div>
     </div>
 </div>
 
 <script>
     const { createApp } = Vue;
-    // 这里是你刚才提供的所有资源数据，已经转为数组格式
-    const defaultSites = [
-        { "key": "qiqi", "name": "七七资源", "api": "https://www.qiqidys.com/api.php/provide/vod", "active": true },
-        { "key": "hongniu", "name": "紅牛資源", "api": "http://hongniuzy2.com/api.php/provide/vod/from/hnm3u8", "active": true },
-        { "key": "liangzi", "name": "量子資源", "api": "http://cj.lziapi.com/api.php/provide/vod/from/lzm3u8", "active": true },
-        { "key": "kaifang", "name": "開放電影", "api": "http://vod-demo.onrender.com/pubdovod.php", "active": true },
-        { "key": "youzhi", "name": "优质资源库", "api": "http://api.1080zyku.com/inc/api.php/provide/vod", "active": true },
-        { "key": "sanshijiu", "name": "39影視", "api": "http://39kan.com/api.php/provide/vod", "active": true },
-        { "key": "tiantang", "name": "天堂资源", "api": "http://vipmv.cc/api.php/provide/vod", "active": true },
-        { "key": "lehuo", "name": "乐活影视", "api": "http://lehootv.com/api.php/provide/vod", "active": true },
-        { "key": "tangrenjie1", "name": "唐人街", "api": "http://tangrenjie.tv/api.php/provide/vod", "active": true },
-        { "key": "kudian1", "name": "酷点资源", "api": "http://api.kuapi.cc/api.php/provide/vod", "active": true },
-        { "key": "wolong1", "name": "卧龙资源", "api": "http://collect.wolongzyw.com/api.php/provide/vod", "active": true },
-        { "key": "senlin", "name": "森林资源", "api": "http://slapibf.com/api.php/provide/vod", "active": true },
-        { "key": "yingku", "name": "影库资源网", "api": "http://api.ykapi.net/api.php/provide/vod", "active": true },
-        { "key": "tantan", "name": "探探资源", "api": "http://apittzy.com/api.php/provide/vod", "active": true },
-        { "key": "jinying", "name": "金鹰资源", "api": "http://jyzyapi.com/provide/vod/from/jinyingm3u8", "active": true },
-        { "key": "guangsu", "name": "光速资源", "api": "http://api.guangsuapi.com/api.php/provide/vod/from/gsm3u8", "active": true },
-        { "key": "aosika", "name": "奥斯卡资源网", "api": "http://aosikazy.com/api.php/provide/vod", "active": true },
-        { "key": "laoya", "name": "老鸭资源采集", "api": "http://api.apilyzy.com/api.php/provide/vod", "active": true },
-        { "key": "beidouxing", "name": "北斗星资源", "api": "http://m3u8.bdxzyapi.com/api.php/provide/vod", "active": true },
-        { "key": "yinghua", "name": "樱花资源", "api": "https://m3u8.apiyhzy.com/api.php/provide/vod", "active": true },
-        { "key": "baidu", "name": "百度资源", "api": "https://api.apibdzy.com/api.php/provide/vod/", "active": true },
-        { "key": "wujin", "name": "无尽资源", "api": "https://api.wujinapi.me/api.php/provide/vod", "active": true },
-        { "key": "ffzy", "name": "非凡影视", "api": "http://ffzy5.tv/api.php/provide/vod", "active": true },
-        { "key": "lzi", "name": "量子资源站", "api": "https://cj.lziapi.com/api.php/provide/vod", "active": true }
-        // ... 其他接口已缩略，建议你手动将刚才转换后的完整 sites 数组粘贴到这里
-    ];
 
     createApp({
         data() {
@@ -102,34 +74,71 @@
             }
         },
         async mounted() {
-            // 优先级：本地存储 > 远程 db.json > 内置默认数据
+            // 初始化逻辑：本地缓存 > db.json > 空
             const localData = localStorage.getItem('my_sites_config');
             if (localData) {
                 this.sites = JSON.parse(localData);
             } else {
+                this.loadFromRemote();
+            }
+        },
+        methods: {
+            // 从服务器载入 db.json
+            async loadFromRemote() {
                 try {
                     const res = await fetch('./db.json');
                     if (res.ok) {
                         const data = await res.json();
-                        this.sites = Array.isArray(data) ? data : data.sites;
-                    } else {
-                        this.sites = defaultSites;
+                        this.sites = Array.isArray(data) ? data : (data.sites || []);
                     }
                 } catch (e) {
-                    this.sites = defaultSites;
+                    console.error("无法从服务器获取数据");
                 }
-            }
-        },
-        methods: {
+            },
+            // 核心功能：处理文件上传导入
+            handleFileUpload(event) {
+                const file = event.target.files[0];
+                if (!file) return;
+
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    try {
+                        const json = JSON.parse(e.target.result);
+                        // 兼容两种格式：[...] 或 { "sites": [...] }
+                        const importedData = Array.isArray(json) ? json : (json.sites || []);
+                        
+                        if (importedData.length === 0) {
+                            alert('JSON 格式不正确或没有有效数据');
+                            return;
+                        }
+
+                        if (confirm(`成功读取 ${importedData.length} 条数据，是否覆盖当前列表？`)) {
+                            // 给每条数据补充 active 字段（如果没有的话）
+                            this.sites = importedData.map(item => ({
+                                active: item.active !== undefined ? item.active : true,
+                                key: item.key || 'new',
+                                name: item.name || '未命名',
+                                api: item.api || ''
+                            }));
+                            alert('导入成功！记得点击“保存到本地”');
+                        }
+                    } catch (err) {
+                        alert('文件解析失败，请确保上传的是标准的 .json 文件');
+                    }
+                };
+                reader.readAsText(file);
+                // 清空 input 方便下次上传同名文件
+                event.target.value = '';
+            },
             addSite() {
                 this.sites.unshift({ key: 'new', name: '新资源', api: '', active: true });
             },
             removeSite(index) {
-                if(confirm('确定删除此接口吗？')) this.sites.splice(index, 1);
+                if(confirm('确定删除吗？')) this.sites.splice(index, 1);
             },
             saveSites() {
                 localStorage.setItem('my_sites_config', JSON.stringify(this.sites));
-                alert('已保存到浏览器本地！');
+                alert('已保存到浏览器本地缓存！');
             },
             exportJSON() {
                 const dataStr = JSON.stringify({ "sites": this.sites }, null, 2);
